Fix spacing on header

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body, html {
     display: grid;
     grid-template-rows: 1fr 1fr;
     box-shadow: 0px 2px 3px rgb(175, 175, 175);
-    margin-bottom: 1px;
+    margin-left: 10px;
 }
 
 .top-header{
@@ -70,15 +70,15 @@ body, html {
 /* Main */
 
 .main{
-    background-color: ;
     display: grid;
     grid-template-columns: 70% 30%;
     grid-template-rows: 50% 50%;
     gap: 5px;
+    
 }
 
 .main > div{
-    border: 1px dotted black;
+    border: 1px var(--main) solid;
 }
 
 .project-display{  
@@ -109,8 +109,20 @@ body, html {
 .announcements-container{
     grid-column: 2 / 3;
     font-size: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
 }
 
+.announcements-element,
+.trending-element{
+    background-color: white;
+    border: var(--main) 1px solid;
+}
+
+.announcements-heading{
+    font-weight: bold;
+}
 
 
 
